**[Kayser][Demo][Demo Client]** Java 17 Demo App