@@ -15,6 +15,12 @@
 	<description>Yago Demo Client Java 17</description>
 	<properties>
 		<java.version>17</java.version>
+
+        <rest-assured.version>5.2.0</rest-assured.version>
+
+        <agent.version>1.0-java17-SNAPSHOT</agent.version>
+
+        <external-api.base-uri>https://api-m.sandbox.paypal.com</external-api.base-uri>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -25,6 +31,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jersey</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -33,10 +43,28 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kayser.agent</groupId>
+            <artifactId>core-agent</artifactId>
+            <version>${agent.version}</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -44,8 +72,162 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <includes>
+                        <include>**/*IT</include>
+                    </includes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>enforce-environment-variable-is-set-1</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireEnvironmentVariable>
+                                    <variableName>EXTERNAL_API_CLIENT_ID</variableName>
+                                </requireEnvironmentVariable>
+                            </rules>
+                            <fail>true</fail>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>enforce-environment-variable-is-set-2</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireEnvironmentVariable>
+                                    <variableName>EXTERNAL_API_CLIENT_SECRET</variableName>
+                                </requireEnvironmentVariable>
+                            </rules>
+                            <fail>true</fail>
+                        </configuration>
+                    </execution>
+                </executions>
 			</plugin>
 		</plugins>
 	</build>
+
+    <profiles>
+        <profile>
+            <id>yago-sandbox-with-agent</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <argLine>-javaagent:${settings.localRepository}/com/kayser/agent/core-agent/${agent.version}/core-agent-${agent.version}.jar
+                                -Dhost.api=http://192.99.13.82
+                                -Dport.api=28080
+                                -Drepository.name=Demo-Java17
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                                --add-opens=java.base/java.io=ALL-UNNAMED
+                                --add-opens=java.base/javax.net=ALL-UNNAMED
+                                --add-opens=java.base/javax.net.ssl=ALL-UNNAMED
+                                --add-opens=java.base/java.time=ALL-UNNAMED
+                                --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED
+                                --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED
+                                --add-exports java.base/sun.net=ALL-UNNAMED
+                            </argLine>
+                            <environmentVariables>
+                                <EXTERNAL_API_BASE_URI>${external-api.base-uri}</EXTERNAL_API_BASE_URI>
+                                <EXTERNAL_API_CLIENT_ID>${env.EXTERNAL_API_CLIENT_ID}</EXTERNAL_API_CLIENT_ID>
+                                <EXTERNAL_API_CLIENT_SECRET>${env.EXTERNAL_API_CLIENT_SECRET}</EXTERNAL_API_CLIENT_SECRET>
+                            </environmentVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>yago-sandbox</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <environmentVariables>
+                                <EXTERNAL_API_BASE_URI>${external-api.base-uri}</EXTERNAL_API_BASE_URI>
+                                <EXTERNAL_API_CLIENT_ID>${env.EXTERNAL_API_CLIENT_ID}</EXTERNAL_API_CLIENT_ID>
+                                <EXTERNAL_API_CLIENT_SECRET>${env.EXTERNAL_API_CLIENT_SECRET}</EXTERNAL_API_CLIENT_SECRET>
+                            </environmentVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>demo-local-with-agent</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <argLine>-javaagent:${settings.localRepository}/com/kayser/agent/core-agent/${agent.version}/core-agent-${agent.version}.jar
+                                -Dhost.api=http://localhost
+                                -Dport.api=38080
+                                -Drepository.name=Demo-Java17
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                                --add-opens=java.base/java.io=ALL-UNNAMED
+                                --add-opens=java.base/javax.net=ALL-UNNAMED
+                                --add-opens=java.base/javax.net.ssl=ALL-UNNAMED
+                                --add-opens=java.base/java.time=ALL-UNNAMED
+                                --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED
+                                --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED
+                                --add-exports java.base/sun.net=ALL-UNNAMED
+                            </argLine>
+                            <environmentVariables>
+                                <EXTERNAL_API_BASE_URI>${external-api.base-uri}</EXTERNAL_API_BASE_URI>
+                                <EXTERNAL_API_CLIENT_ID>${env.EXTERNAL_API_CLIENT_ID}</EXTERNAL_API_CLIENT_ID>
+                                <EXTERNAL_API_CLIENT_SECRET>${env.EXTERNAL_API_CLIENT_SECRET}</EXTERNAL_API_CLIENT_SECRET>
+                            </environmentVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>demo-local</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <environmentVariables>
+                                <EXTERNAL_API_BASE_URI>${external-api.base-uri}</EXTERNAL_API_BASE_URI>
+                                <EXTERNAL_API_CLIENT_ID>${env.EXTERNAL_API_CLIENT_ID}</EXTERNAL_API_CLIENT_ID>
+                                <EXTERNAL_API_CLIENT_SECRET>${env.EXTERNAL_API_CLIENT_SECRET}</EXTERNAL_API_CLIENT_SECRET>
+                            </environmentVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
